<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorRideshare"
    android:orientation="vertical">

    <TextView
        style="@style/AppTheme.HeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_verify_otp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:text="@string/verify_otp_brief"
        android:textColor="@android:color/white" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="@dimen/small"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/field_verification_code"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center_horizontal"
            android:hint="@string/hint_verification_code"
            android:inputType="phone"
            android:maxLength="6"
            android:maxLines="1"
            android:textAlignment="gravity"
            android:textSize="@dimen/xxlarge"
            android:theme="@style/CustomEditText" />

        <ImageButton
            android:id="@+id/button_verify_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:contentDescription="@string/verify_phone_auth"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/chevron_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/small">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/chat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/small"
            android:text="@string/resend_sms" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_call_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/small">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/phone_call" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/small"
            android:text="@string/call_user" />
    </LinearLayout>
</LinearLayout>